--- a/Multyplayer/Assembly-CSharp-vs.csproj
+++ b/Multyplayer/Assembly-CSharp-vs.csproj
@@ -46,10 +46,11 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Multyserver.cs" />
-     <Compile Include="Assets\Server.cs" />
-     <Compile Include="Assets\ServerMovement.cs" />
-     <Compile Include="Assets\Spawn.cs" />
+     <Compile Include="Assets\NetworkManager.cs" />
+     <Compile Include="Assets\Old\Multyserver.cs" />
+     <Compile Include="Assets\Old\Server.cs" />
+     <Compile Include="Assets\Old\ServerMovement.cs" />
+     <Compile Include="Assets\Old\Spawn.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
