--- a/Multyplayer/Assembly-CSharp-vs.csproj
+++ b/Multyplayer/Assembly-CSharp-vs.csproj
@@ -53,6 +53,7 @@
      <Compile Include="Assets\Old\Spawn.cs" />
      <Compile Include="Assets\_scripts\Snake\ChangeTailArt.cs" />
      <Compile Include="Assets\_scripts\Snake\Snake.cs" />
+     <Compile Include="Assets\_scripts\Snake\SnakeControlls.cs" />
      <Compile Include="Assets\_scripts\SpawnPickups.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity5/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
