--- a/Multyplayer/Assembly-CSharp-vs.csproj
+++ b/Multyplayer/Assembly-CSharp-vs.csproj
@@ -39,27 +39,27 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files/Unity5/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files/Unity5/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\NetworkManager.cs" />
-     <Compile Include="Assets\Old\Multyserver.cs" />
-     <Compile Include="Assets\Old\Server.cs" />
-     <Compile Include="Assets\Old\ServerMovement.cs" />
-     <Compile Include="Assets\Old\Spawn.cs" />
+     <Compile Include="Assets\_scripts\Network\Multyserver.cs" />
+     <Compile Include="Assets\_scripts\Network\NetworkManager.cs" />
+     <Compile Include="Assets\_scripts\Network\Server.cs" />
+     <Compile Include="Assets\_scripts\Network\ServerMovement.cs" />
+     <Compile Include="Assets\_scripts\Network\Spawn.cs" />
      <Compile Include="Assets\_scripts\Snake\ChangeTailArt.cs" />
      <Compile Include="Assets\_scripts\Snake\Snake.cs" />
      <Compile Include="Assets\_scripts\Snake\SnakeControlls.cs" />
      <Compile Include="Assets\_scripts\SpawnPickups.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity5/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
- <HintPath>C:/Program Files/Unity5/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+ <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
