added endscreen to kevin's scene

--- a/Multyplayer/Assembly-CSharp-vs.csproj
+++ b/Multyplayer/Assembly-CSharp-vs.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\_scripts\GameOver\CheckPlayers.cs" />
+     <Compile Include="Assets\_scripts\GameOver\RestartScene.cs" />
      <Compile Include="Assets\_scripts\GameOver\TextColor.cs" />
      <Compile Include="Assets\_scripts\MenuScript.cs" />
      <Compile Include="Assets\_scripts\Network\Multyserver.cs" />
